[project]
name = "onuslibs"
version = "0.1.0"
description = "OnusLibs - REST-first Facade for ONUS/Cyclos APIs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Vũ GPT"}]
license = {text = "MIT"}

dependencies = [
    "httpx>=0.27.0",
    "keyring>=24.3.0",
]

[project.optional-dependencies]
db = ["pymysql>=1.1.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
